--- a/views/partials/home_nav.ejs
+++ b/views/partials/home_nav.ejs
@@ -14,7 +14,7 @@
           </li> 
         </li> 
         <li class="nav-item">
-          <a class="nav-link" href="/personal_post">Post</a>
+          <a class="nav-link" href="/post">Post</a>
         </li> 
         </ul>
         <ul class="d-flex right_navitem">
