--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,17 +1,158 @@
 
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Create-Post</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    
+</head>
+<body>
 <%- include('./partials/home_nav.ejs')%>
-
-<div class="container">
-
-      <!-- <div class="card card-body text-center">
-        <h1><i class="fab fa-node-js fa-3x"></i></h1>
-        <p>Create an account or login</p>
-        <a href="/users/register" class="btn btn-primary btn-block mb-2"
-          >Register</a
-        >
-        <a href="/users/login" class="btn btn-secondary btn-block">Login</a>
-    </div>
-  </div> -->
+<% if(posts.length>0){%>
+    <% posts.forEach(post=>{%>
+<div class="container mt-5 mb-5">
+  <div class="row d-flex align-items-center justify-content-center">
+      <div class="col-md-6">
+          <div class="card">
+              <div class="d-flex justify-content-between p-2 px-3">
+                  <div class="d-flex flex-row align-items-center"> <img src="https://i.imgur.com/UXdKE3o.jpg" width="50" class="rounded-circle">
+                      <div class="d-flex flex-column ml-2"> <span class="font-weight-bold"><%=post.user.name%></span> <small class="text-primary">Collegues</small> </div>
+                  </div>
+                  <div class="d-flex flex-row mt-1 ellipsis"> 
+                    <small class="mr-2">
+                        <span class="post-time" data-timestamp="<%= post.date %>">
+                          <%= post.date.toDateString() %>
+                        </span>
+                      </small>
+                      
+                 </div>
+              </div>
+              
+              <div class="p-2">
+                <% if (post.desc.length <= 150) { %>
+                    <!-- If the description is 50 characters or less, display it entirely -->
+                    <p class="text-justify"><%= post.desc %></p>
+                  <% } else { %>
+                    <!-- If the description is longer than 50 characters, display the first 50 characters -->
+                    <p class="text-justify" data-desc="<%= post.desc %>"><%= post.desc.slice(0, 150) %></p>
+                    <!-- Include a "See More" button to expand the description -->
+                    <button class="see-more-button">...See More</button>
+                  <% } %>
+                
+                  <hr>
+                  <div class="d-flex justify-content-between align-items-center">
+                      <div class="d-flex flex-row icons d-flex align-items-center"> <i class="fa fa-heart"></i> <i class="fa fa-smile-o ml-2"></i> </div>
+                      <div class="d-flex flex-row muted-color"> <span>2 comments</span> <span class="ml-2">Share</span> </div>
+                  </div>
+                  <hr>
+                  <div class="comments">
+                      <!-- <div class="d-flex flex-row mb-2"> <img src="https://i.imgur.com/9AZ2QX1.jpg" width="40" class="rounded-image">
+                          <div class="d-flex flex-column ml-2"> <span class="name">Daniel Frozer</span> <small class="comment-text">I like this alot! thanks alot</small>
+                              <div class="d-flex flex-row align-items-center status"> <small>Like</small> <small>Reply</small> <small>Translate</small> <small>18 mins</small> </div>
+                          </div>
+                      </div>
+                      <div class="d-flex flex-row mb-2"> <img src="https://i.imgur.com/1YrCKa1.jpg" width="40" class="rounded-image">
+                          <div class="d-flex flex-column ml-2"> <span class="name">Elizabeth goodmen</span> <small class="comment-text">Thanks for sharing!</small>
+                              <div class="d-flex flex-row align-items-center status"> <small>Like</small> <small>Reply</small> <small>Translate</small> <small>8 mins</small> </div>
+                          </div>
+                      </div> -->
+                      <div class="comment-input"> 
+                        
+                        <input type="text" class="form-control" placeholder="write a comment">
+                          <div class="fonts"> <i class="fa fa-paper-plane"></i> </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
 </div>
+<%})%>
+          <%} else{%>
+            <p class="post-content">There is nothing to show</p>
+            <% }%>
   <%- include('./partials/footer.ejs')%>
+  <script>
+   document.querySelectorAll('.see-more-button').forEach(function (button) {
+  button.addEventListener('click', function () {
+    const paragraphElement = this.previousElementSibling; // Get the previous sibling of the clicked button, which is the <p> element
+    if (paragraphElement) {
+      const fullDescription = paragraphElement.getAttribute('data-desc');
+      const currentState = paragraphElement.getAttribute('data-state'); // Get the current state
+
+      if (currentState === 'collapsed') {
+        // If it's currently collapsed, expand it
+        paragraphElement.textContent = fullDescription;
+        paragraphElement.setAttribute('data-state', 'expanded');
+        button.textContent = 'Show Less'; // Change the button text
+      } else {
+        // If it's currently expanded, collapse it
+        paragraphElement.textContent = fullDescription.slice(0, 150);
+        paragraphElement.setAttribute('data-state', 'collapsed');
+        button.textContent = '...See More'; // Change the button text
+      }
+    } else {
+      console.error('Paragraph element not found');
+    }
+  });
+});
+
+// Get the post timestamp (replace this with the actual timestamp from your data)
+
+  // Function to format and update the posting time
+  function updatePostingTime() {
+    const postTimeElements = document.querySelectorAll('.post-time');
+
+    postTimeElements.forEach((element) => {
+      const timestamp = new Date(element.getAttribute('data-timestamp'));
+      const now = new Date();
+
+      // Calculate the time difference in milliseconds
+      const timeDifference = now - timestamp;
+
+      // Calculate time units (seconds, minutes, hours, days)
+      const seconds = Math.floor(timeDifference / 1000);
+      const minutes = Math.floor(seconds / 60);
+      const hours = Math.floor(minutes / 60);
+      const days = Math.floor(hours / 24);
+
+      let formattedTime = '';
+
+      if (days > 0) {
+        formattedTime = `${days}d`;
+      } else if (hours > 0) {
+        formattedTime = `${hours}h`;
+      } else if (minutes > 0) {
+        formattedTime = `${minutes}m`;
+      } else {
+        formattedTime = `${seconds}s`;
+      }
+
+      // Update the element with the formatted time
+      element.textContent = formattedTime+' ago';
+    });
+  }
+
+  // Call the function to initially format the posting times
+  updatePostingTime();
+
+  // Periodically update posting times (e.g., every minute)
+  setInterval(updatePostingTime, 60000); // Update every minute
+
+
+
+
+  </script>
+</body>
+</html>
+  
+   
+    
