"configure the welcome path issue"

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -75,7 +75,7 @@
                             </tr>
                             <tr>
                                <td class="field">Mobile</td>
-                               <td><i class="fa fa-mobile fa-lg m-r-5"></i> +1-(847)- 367-8924 <a href="javascript:;" class="m-l-5">Edit</a></td>
+                               <td><i class="fa fa-mobile fa-lg m-r-5"></i> +88-01834549458 <a href="javascript:;" class="m-l-5">Edit</a></td>
                             </tr>
                             <tr>
                                <td class="field">Home</td>
@@ -374,11 +374,29 @@
                                <td class="field">Birthdate</td>
                                <td>
                                   <select class="form-control input-inline input-xs" name="day">
+                                     <option value="01" selected="">01</option>
+                                     <option value="02" selected="">02</option>
+                                     <option value="03" selected="">03</option>
                                      <option value="04" selected="">04</option>
+                                     <option value="05" selected="">05</option>
+                                     <option value="06" selected="">06</option>
+                                     <option value="07" selected="">07</option>
                                   </select>
                                   -
                                   <select class="form-control input-inline input-xs" name="month">
+                                    
+                                     <option value="01" selected="">01</option>
+                                     <option value="02" selected="">02</option>
+                                     <option value="03" selected="">03</option>
+                                     <option value="04" selected="">04</option>
+                                     <option value="05" selected="">05</option>
+                                     <option value="06" selected="">06</option>
+                                     <option value="07" selected="">07</option>
+                                     <option value="08" selected="">08</option>
+                                     <option value="09" selected="">09</option>
+                                     <option value="10" selected="">10</option>
                                      <option value="11" selected="">11</option>
+                                     <option value="12" selected="">12</option>
                                   </select>
                                   -
                                   <select class="form-control input-inline input-xs" name="year">
@@ -390,7 +408,8 @@
                                <td class="field">Language</td>
                                <td>
                                   <select class="form-control input-inline input-xs" name="language">
-                                     <option value="" selected="">English</option>
+                                     <option value="English" selected="">English</option>
+                                     <option value="Bangla" selected="">Bangla</option>
                                   </select>
                                </td>
                             </tr>
