--- a/views/partials/home_nav.ejs
+++ b/views/partials/home_nav.ejs
@@ -16,6 +16,10 @@
         <li class="nav-item">
           <a class="nav-link" href="/post">Post</a>
         </li> 
+
+        <li class="nav-item">
+          <a class="nav-link" href="/chat">chat</a>
+        </li> 
         </ul>
         <ul class="d-flex right_navitem">
         
