--- a/views/post.ejs
+++ b/views/post.ejs
@@ -9,7 +9,7 @@
         <input type="text" name="title" class="form-control" id="post-title" placeholder="" required>
         
         <label for="post-desc" class="desc">Content</label>
-       <textarea name="desc" style="height: 200px; column-gap: 2cm;" class="form-control" id="post-desc" required></textarea><br>
+       <textarea name="desc" style="height: 200px; column-gap: 2cm;" class="form-control" id="post-desc" name="editorContent" required></textarea><br>
        <button type="submit" class="btn btn-success text-center">post</button>
     </form>
 
