--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.quilljs.com/1.3.6/quill.snow.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     
 </head>
@@ -23,7 +24,7 @@
       <div class="col-md-6">
           <div class="card">
               <div class="d-flex justify-content-between p-2 px-3">
-                  <div class="d-flex flex-row align-items-center"> <img src="https://i.imgur.com/UXdKE3o.jpg" width="50" class="rounded-circle">
+                  <div class="d-flex flex-row align-items-center"> <img src="https://bootdey.com/img/Content/avatar/avatar7.png" width="50" class="rounded-circle">
                       <div class="d-flex flex-column ml-2"> <span class="font-weight-bold"><%=post.user.name%></span> <small class="text-primary">Collegues</small> </div>
                   </div>
                   <div class="d-flex flex-row mt-1 ellipsis"> 
@@ -80,7 +81,20 @@
             <p class="post-content">There is nothing to show</p>
             <% }%>
   <%- include('./partials/footer.ejs')%>
+  <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
   <script>
+    var quill = new Quill('#editor', {
+      theme: 'snow',
+      modules: {
+        toolbar: [
+          [{ header: [1, 2, false] }],
+          ['bold', 'italic', 'underline', 'strike', 'blockquote'],
+          [{ list: 'ordered' }, { list: 'bullet' }],
+          ['link', 'image'],
+          ['clean'],
+        ],
+      },
+    });
    document.querySelectorAll('.see-more-button').forEach(function (button) {
   button.addEventListener('click', function () {
     const paragraphElement = this.previousElementSibling; // Get the previous sibling of the clicked button, which is the <p> element
@@ -104,8 +118,6 @@
     }
   });
 });
-
-// Get the post timestamp (replace this with the actual timestamp from your data)
 
   // Function to format and update the posting time
   function updatePostingTime() {
