configuring welcome path

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-  <%- include('./partials/nav_login.ejs')%>
+  <!-- <%- include('./partials/nav_login.ejs')%> -->
 
   <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
     <div class="row gx-lg-5 align-items-center mb-5">
@@ -60,7 +60,7 @@
               placeholder="Enter Password"
             />
           </div>
-          <button type="submit" class="btn btn-primary btn-block">Login</button>
+          <button type="submit" class="btn btn-primary btn-block my-3">Login</button>
         </form>
         <p class="lead mt-4">
           No Account? <a href="/users/register">Register</a>
