--- a/views/partials/home_nav.ejs
+++ b/views/partials/home_nav.ejs
@@ -7,13 +7,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/welcome">Home</a>
+            <a class="nav-link " aria-current="page" href="/welcome">Home</a>
           </li> 
           <li class="nav-item">
             <a class="nav-link" href="/group">Group</a>
           </li> 
         </li> 
-        <li class="nav-item">
+        <li class="nav-item ">
           <a class="nav-link" href="/post">Post</a>
         </li> 
 
@@ -44,3 +44,4 @@
       </div>
     </div>
   </nav>
+  
