--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,24 +18,20 @@
 </head>
 <body>
 
-  <%- include('./partials/nav_register.ejs')%>
+  <!-- <%- include('./partials/nav_register.ejs')%> -->
 
-    <div class="container mt-4">
+    <div class="container">
    
     <!-- Section: Design Block -->
 <section class="background-radial-gradient overflow-hidden">
 
   
-    <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
+    <div class="container px-4 py-5 px-md-5 text-left text-md-start my-5 position-fixed">
       <div class="row gx-lg-5 align-items-center mb-5">
         <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
-          <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
-            Welcome to <br />
-            <span style="color: hsl(218, 81%, 75%)">COLAP</span>
+          <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(220, 67%, 56%)">
+            Welcome to <span style="color: hsl(218, 81%, 75%)">COLP</span>
           </h1>
-          <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
-           
-          </p>
         </div>
   
         <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
@@ -48,7 +44,7 @@
               <form action="/users/register" method="POST">
                 <!-- 2 column grid layout with text inputs for the first and last names -->
                 <h1 class="text-center mb-3">
-                  <i class="fas fa-user-plus"></i> Register
+                  <i class="fas fa-user-plus"></i> Create a New Account
                 </h1>
                   <!-- Enter Full name -->
                   <div class="form-group">
@@ -119,7 +115,7 @@
 
                 <!-- Submit button -->
                 <button type="submit" class="btn btn-primary btn-block mb-4">
-                  Register
+                  Sign Up
                 </button>
   
                 <!-- Register buttons -->
