--- a/public/style.css
+++ b/public/style.css
@@ -30,12 +30,27 @@ footer{
     font-weight: 200;
     left: 0;
     right: 0;
-    height: 50px;
+    height: 20px;
     background-color: #ccc;
     text-align: center;
     /* background-color: aqua; */
     bottom: 0;
 }
+
+#blueButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: blue;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+}
+#container {
+    position: relative;
+}
+
 .background-radial-gradient {
     background-color: hsl(218, 41%, 15%);
     background-image: radial-gradient(650px circle at 0% 0%,
