--- a/views/eachPost.ejs
+++ b/views/eachPost.ejs
@@ -116,9 +116,11 @@
                           }
                       %>
                       </div>
-
+                      <button id="show-reply-form" class="btn btn-info  btn-sm mt-3">reply</button>
                       <div class="col-md-12">
-                          <form class="do-reply" id="reply">
+                        <!-- Show/Hide reply Form button -->
+                       
+                          <form class="do-reply" id="reply-form" style="display:none;">
                               <input type="hidden" name="post_id" value="<%= post._id %>">
                               <input type="hidden" name="comment_id" value="<%= comment._id %>">
                               <input type="hidden" name="comment_email" value="<%= comment.email %>">
@@ -206,7 +208,13 @@
           $('#comment-section').prepend(html);
           });
 
+          // Show/Hide Comment Form button click event
+          $("#show-reply-form").click(function () {
+                $("#reply-form").toggle();
+                });
+
         $('.do-reply').submit(function(event){
+          
         event.preventDefault();
 
         var formData = {};
@@ -225,7 +233,7 @@
                 socket.emit("new_reply",formData);
 
                 $(obj)[0].reset();
-                $(obj).parent().parent().append('<p>'+data.msg+'</p>');
+                // $(obj).parent().parent().append('<p>'+data.msg+'</p>');
                 $(".reply-status").text(data.msg);
                         setTimeout(function () {
                           $(".reply-status").text("");
