--- a/views/partials/home_nav.ejs
+++ b/views/partials/home_nav.ejs
@@ -9,9 +9,7 @@
           <li class="nav-item">
             <a class="nav-link " aria-current="page" href="/welcome">Home</a>
           </li> 
-          <li class="nav-item">
-            <a class="nav-link" href="/group">Group</a>
-          </li> 
+          
         </li> 
         <li class="nav-item ">
           <a class="nav-link" href="/post">Post</a>
@@ -19,6 +17,9 @@
 
         <li class="nav-item">
           <a class="nav-link" href="/chat">chat</a>
+        </li> 
+        <li class="nav-item">
+          <a class="nav-link" href="/About">About</a>
         </li> 
         </ul>
         <ul class="d-flex right_navitem">
