Customizing nav-bar

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,11 @@
-
 <%- include('./partials/home_nav.ejs')%>
 <div class="container mt-5">
-    <p>This is a collaborative learning platform (<b style="color:blue">COLP</b>) where you can express your thought <br></p>
+  <p>
+    This is a collaborative learning platform (<b style="color: blue">COLP</b>)
+    where you can express your thought. Read blog about various topic. One can
+    also see the summarize form of the large blog and decide whether this belog
+    is helpful to him/her. <br />
+  </p>
 </div>
 
 <%- include('./partials/footer.ejs')%>
