--- a/views/partials/home_nav.ejs
+++ b/views/partials/home_nav.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#" style="font-size: large; font-weight: bold;color: blueviolet;">COLP</a>
+      <strong class="navbar-brand" style="font-size: large; font-weight: bold;color: blueviolet;">COLP</strong>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -12,11 +12,11 @@
           
         </li> 
         <li class="nav-item ">
-          <a class="nav-link" href="/post">Post</a>
+          <a class="nav-link" href="/post">Add-blog</a>
         </li> 
 
         <li class="nav-item">
-          <a class="nav-link" href="/chat">chat</a>
+          <a class="nav-link" href="/chat">Create-Chat-Room</a>
         </li> 
         <li class="nav-item">
           <a class="nav-link" href="/About">About</a>
@@ -26,10 +26,10 @@
         
           <% if(user){%>
           <li class="nav-item">
-            <a class="nav-link" href="/users/logout" >logout</a>
+            <a class="nav-link" href="/users/logout" >Logout</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/profile" >welcome <%=user.name%></a>
+            <a class="nav-link" href="/profile" ><%=user.name%></a>
           </li>
           <%}else{%>
             <li class="nav-item">
