--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -25,15 +25,16 @@
                 <% if (data.post.desc.length <= 150) { %>
                     <!-- If the description is 50 characters or less, display it entirely -->
                     <p class="text-justify"><%=data.post.desc %></p>
+                    <button class="see-more-button"><a href="/eachPost/<%=data.post._id%>">See Deatils</a></button>
                   <% } else { %>
                     <!-- If the description is longer than 50 characters, display the first 50 characters -->
                     <p class="text-justify" data-desc="<%= data.post.desc %>"><%= data.post.desc.slice(0, 150) %></p>
                     <!-- Include a "See More" button to expand the description -->
-                    <button class="see-more-button"><a href="/eachPost/<%=data.post._id%>">...See More</a></button>
+                    <button class="see-more-button"><a href="/eachPost/<%=data.post._id%>">See Deatils</a></button>
                   <% } %>
                 
                   <hr>
-                  <div class="d-flex justify-content-between align-items-center">
+                  <!-- <div class="d-flex justify-content-between align-items-center">
                       <div class="d-flex flex-row icons d-flex align-items-center">
                         <i class="fa fa-thumbs-up mx-2"></i>
                         <span id="like_<%= data.post._id %>"><%= data.likeCount %></span>     
@@ -41,14 +42,14 @@
                         <span id="dislike_<%=data.post_id%>"><%= data.dislikeCount %></span>
                         </div>
                       <div class="d-flex flex-row muted-color"> <span>2 comments</span> <span class="ml-2">Share</span> </div>
-                  </div>
+                  </div> -->
                   <hr>
 
-                      <div class="comment-input"> 
+                      <!-- <div class="comment-input"> 
                         
                         <input type="text" class="form-control" placeholder="write a comment" id="commentInput_<%= data.post.id %>">
                           <div class="fonts"><button class="btn" onclick="addComment('<%= data.post.id %>')"> <i class="fa fa-paper-plane"></i></button></div>
-                      </div>
+                      </div> -->
                   </div>
               </div>
           </div>
