--- a/public/style.css
+++ b/public/style.css
@@ -41,15 +41,27 @@ footer{
     position: absolute;
     top: 10px;
     right: 10px;
-    background-color: blue;
+    background-color:#007bff;
     color: white;
     padding: 10px 20px;
     border: none;
     cursor: pointer;
-}
-#container {
+  }
+
+  #dltButton {
+    position: absolute;
+    top: 70px; /* Adjust the top position as needed */
+    right: 10px;
+    background-color:  #dc3545;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+  }
+
+  #container {
     position: relative;
-}
+  }
 
 .background-radial-gradient {
     background-color: hsl(218, 41%, 15%);
