--- a/views/eachPost.ejs
+++ b/views/eachPost.ejs
@@ -4,6 +4,10 @@
   <div class="row">
     <div id="container">
       <button id="blueButton">Summarize the blog</button>
+      <div class="dlt"> 
+         <button id="dltButton">Delete the blog</button>
+      </div>
+    
       <!-- Include api.js directly -->
       <script src="/api.js"></script>
 
