--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,7 @@
 
   <!-- <%- include('./partials/nav_login.ejs')%> -->
 
-  <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
+  <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5 login_page">
     <div class="row gx-lg-5 align-items-center mb-5">
       <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
         <h1 class="my-5 display-5 fw-bold ls-tight" >
