--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -9,7 +9,7 @@
           <div class="card">
               <div class="d-flex justify-content-between p-2 px-3">
                   <div class="d-flex flex-row align-items-center"> <img src="https://bootdey.com/img/Content/avatar/avatar7.png" width="50" class="rounded-circle">
-                      <div class="d-flex flex-column ml-2"> <span class="font-weight-bold"><%=data.post.user.name%></span> <small class="text-primary">Collegues</small> </div>
+                      <div class="d-flex flex-column ml-2"> <span class="font-weight-bold">  <%=data.user.name%></span> <small class="text-primary">Student</small> </div>
                   </div>
                   <div class="d-flex flex-row mt-1 ellipsis"> 
                     <small class="mr-2">
