--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,10 +24,7 @@
           <span >COLP</span>
         </h1>
         <p class="mb-4 opacity-70" >
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-          Temporibus, expedita iusto veniam atque, magni tempora mollitia
-          dolorum consequatur nulla, neque debitis eos reprehenderit quasi
-          ab ipsum nisi dolorem modi. Quos?
+          In the vibrant realm of collaborative learning platforms, knowledge becomes a dynamic tapestry woven together by the diverse threads of individual insights. These digital ecosystems transcend traditional educational boundaries, fostering an environment where learners seamlessly connect, exchange ideas, and collectively shape their intellectual journey. Through the synergy of collaborative tools, such platforms empower students to contribute their unique perspectives, enriching the collective pool of understanding. Discussions unfold like intellectual symphonies, with each participant playing a crucial note in the harmonious melody of shared knowledge.
         </p>
       </div>
 
