--- a/views/dashboards.ejs
+++ b/views/dashboards.ejs
@@ -1,9 +1,8 @@
+<%- include('./partials/home_nav.ejs');%>
 
-    <%- include('./partials/home_nav.ejs');%>
-    <h1 class="mt-4">Dashboard</h1>
-<p class="lead mb-3">Welcome <%=user.name%></p>
-<!-- <a href="/users/logout" class="btn btn-secondary">Logout</a> -->
-
+<div class="container">
+  <h1 class="mt-4">Dashboard</h1>
+  <p class="lead mb-3">Welcome <%= user.name %></p>
 <%- include('./partials/footer.ejs');%>
-    <!-- JavaScript Bundle with Popper -->
+<!-- JavaScript Bundle with Popper -->
 
