Pagination issue fixed 17/01/2024

--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -3,7 +3,7 @@
 <% if(paginatedPosts.length > 0) { %>
   <!-- Display paginated posts -->
   <% paginatedPosts.forEach(post => { %>
-    <div class="container mt-5 mb-5">
+    <div class="container mt-5 mb-5" style="max-width: 1200px;">
       <div class="row d-flex align-items-center justify-content-center">
         <div class="col-md-6">
           <div class="card">
